--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: BerniceTempleman.GitHub.io
 description: My github web page
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
